<resources>
    <string name="app_name">Calculator</string>
    <string name="result_text_label">Ans :</string>
    <string name="operator_plus">+</string>
    <string name="operator_minus">-</string>
    <string name="operator_mul">x</string>
    <string name="operator_div">/</string>
    <string name="operator_equal">=</string>

    <string name="btn_zero">0</string>
    <string name="btn_one">1</string>
    <string name="btn_two">2</string>
    <string name="btn_three">3</string>
    <string name="btn_four">4</string>
    <string name="btn_five">5</string>
    <string name="btn_six">6</string>
    <string name="btn_seven">7</string>
    <string name="btn_eight">8</string>
    <string name="btn_nine">9</string>

    <string name="btn_clear">AC</string>
    <string name="btn_dot">.</string>
    <string name="text_hint">Number</string>





</resources>