<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/light_main_bg"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar_bg"
            android:padding="@dimen/dimension_8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/app_name"
            app:titleTextColor="@color/white" />

        <EditText
            android:id="@+id/value_one_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimension_8dp"
            android:background="@drawable/border_radius"
            android:hint="@string/text_hint"
            android:inputType="numberDecimal"
            android:paddingHorizontal="@dimen/dimension_8dp"
            android:paddingVertical="@dimen/dimension_16dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <EditText
            android:id="@+id/value_two_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimension_8dp"
            android:background="@drawable/border_radius"
            android:hint="@string/text_hint"
            android:inputType="numberDecimal"
            android:paddingHorizontal="@dimen/dimension_8dp"
            android:paddingVertical="@dimen/dimension_16dp"
            app:layout_constraintTop_toBottomOf="@+id/value_one_text_field" />

        <TextView
            android:id="@+id/ans_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimension_16dp"
            android:text="@string/result_text_label"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/dimension_32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/value_two_text_field" />

        <TextView
            android:id="@+id/answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimension_16dp"
            android:textSize="@dimen/dimension_32dp"
            app:layout_constraintStart_toEndOf="@+id/ans_text_label"
            app:layout_constraintTop_toBottomOf="@+id/value_two_text_field" />

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="@dimen/ic_back_dimen"
            android:layout_height="@dimen/ic_back_dimen"
            android:layout_marginEnd="@dimen/dimension_32dp"
            android:src="@drawable/clear"
            app:layout_constraintBottom_toTopOf="@+id/btn_equal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/value_two_text_field" />

        <TextView
            android:id="@+id/btn_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_border_radous_layout"
            android:backgroundTint="@color/toolbar_bg"
            android:paddingHorizontal="@dimen/dimension_32dp"
            android:paddingVertical="@dimen/dimension_16dp"
            android:text="@string/operator_plus"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/btn_minus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ans_text_label" />


        <TextView
            android:id="@+id/btn_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_border_radous_layout"
            android:backgroundTint="@color/toolbar_bg"
            android:paddingHorizontal="@dimen/dimension_32dp"
            android:paddingVertical="@dimen/dimension_16dp"
            android:text="@string/operator_minus"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/btn_mul"
            app:layout_constraintStart_toEndOf="@+id/btn_plus"
            app:layout_constraintTop_toBottomOf="@id/ans_text_label" />

        <TextView
            android:id="@+id/btn_mul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_border_radous_layout"
            android:backgroundTint="@color/toolbar_bg"
            android:paddingHorizontal="@dimen/dimension_32dp"
            android:paddingVertical="@dimen/dimension_16dp"
            android:text="@string/operator_mul"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/btn_div"
            app:layout_constraintStart_toEndOf="@+id/btn_minus"
            app:layout_constraintTop_toBottomOf="@id/ans_text_label" />

        <TextView
            android:id="@+id/btn_div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_border_radous_layout"
            android:backgroundTint="@color/toolbar_bg"
            android:paddingHorizontal="@dimen/dimension_32dp"
            android:paddingVertical="@dimen/dimension_16dp"
            android:text="@string/operator_div"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/btn_equal"
            app:layout_constraintStart_toEndOf="@+id/btn_mul"
            app:layout_constraintTop_toBottomOf="@id/ans_text_label" />

        <TextView
            android:id="@+id/btn_equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_border_radous_layout"
            android:paddingHorizontal="@dimen/dimension_32dp"
            android:paddingVertical="@dimen/dimension_16dp"
            android:text="@string/operator_equal"
            android:textColor="@color/toolbar_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_div"
            app:layout_constraintTop_toBottomOf="@id/ans_text_label" />


        <TextView
            android:id="@+id/btn_nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimension_16dp"
            android:background="@drawable/btn_border_radous_layout"
            android:paddingHorizontal="@dimen/dimension_40dp"
            android:paddingVertical="@dimen/dimension_40dp"
            android:text="@string/btn_nine"
            android:textColor="@color/toolbar_bg"
            android:textSize="@dimen/fs_20sp"
            app:layout_constraintEnd_toStartOf="@+id/btn_eight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_plus" />

        <TextView
            android:id="@+id/btn_eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimension_16dp"
            android:background="@drawable/btn_border_radous_layout"
            android:paddingHorizontal="@dimen/dimension_40dp"
            android:paddingVertical="@dimen/dimension_40dp"
            android:text="@string/btn_eight"
            android:textColor="@color/toolbar_bg"
            android:textSize="@dimen/fs_20sp"
            app:layout_constraintEnd_toStartOf="@+id/btn_seven"
            app:layout_constraintStart_toEndOf="@+id/btn_nine"
            app:layout_constraintTop_toBottomOf="@id/btn_plus" />

        <TextView
            android:id="@+id/btn_seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimension_16dp"
            android:background="@drawable/btn_border_radous_layout"
            android:paddingHorizontal="@dimen/dimension_40dp"
            android:paddingVertical="@dimen/dimension_40dp"
            android:text="@string/btn_seven"
            android:textColor="@color/toolbar_bg"
            android:textSize="@dimen/fs_20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_eight"
            app:layout_constraintTop_toBottomOf="@id/btn_plus" />

        <TextView
            android:id="@+id/btn_six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimension_16dp"
            android:background="@drawable/btn_border_radous_layout"
            android:backgroundTint="@color/light_bg"
            android:paddingHorizontal="@dimen/dimension_40dp"
            android:paddingVertical="@dimen/dimension_40dp"
            android:text="@string/btn_six"
            android:textColor="@color/toolbar_bg"
            android:textSize="@dimen/fs_20sp"
            app:layout_constraintEnd_toStartOf="@+id/btn_five"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_nine" />

        <TextView
            android:id="@+id/btn_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimension_16dp"
            android:background="@drawable/btn_border_radous_layout"
            android:backgroundTint="@color/light_bg"
            android:paddingHorizontal="@dimen/dimension_40dp"
            android:paddingVertical="@dimen/dimension_40dp"
            android:text="@string/btn_five"
            android:textColor="@color/toolbar_bg"
            android:textSize="@dimen/fs_20sp"
            app:layout_constraintEnd_toStartOf="@+id/btn_four"
            app:layout_constraintStart_toEndOf="@+id/btn_six"
            app:layout_constraintTop_toBottomOf="@id/btn_nine" />

        <TextView
            android:id="@+id/btn_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimension_16dp"
            android:background="@drawable/btn_border_radous_layout"
            android:backgroundTint="@color/light_bg"
            android:paddingHorizontal="@dimen/dimension_40dp"
            android:paddingVertical="@dimen/dimension_40dp"
            android:text="@string/btn_four"
            android:textColor="@color/toolbar_bg"
            android:textSize="@dimen/fs_20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_five"
            app:layout_constraintTop_toBottomOf="@id/btn_nine" />


        <TextView
            android:id="@+id/btn_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimension_16dp"
            android:background="@drawable/btn_border_radous_layout"
            android:backgroundTint="@color/light_bg"
            android:paddingHorizontal="@dimen/dimension_40dp"
            android:paddingVertical="@dimen/dimension_40dp"
            android:text="@string/btn_three"
            android:textColor="@color/toolbar_bg"
            android:textSize="@dimen/fs_20sp"
            app:layout_constraintEnd_toStartOf="@+id/btn_two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_six" />

        <TextView
            android:id="@+id/btn_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimension_16dp"
            android:background="@drawable/btn_border_radous_layout"
            android:backgroundTint="@color/light_bg"
            android:paddingHorizontal="@dimen/dimension_40dp"
            android:paddingVertical="@dimen/dimension_40dp"
            android:text="@string/btn_two"
            android:textColor="@color/toolbar_bg"
            android:textSize="@dimen/fs_20sp"
            app:layout_constraintEnd_toStartOf="@+id/btn_one"
            app:layout_constraintStart_toEndOf="@+id/btn_three"
            app:layout_constraintTop_toBottomOf="@id/btn_six" />

        <TextView
            android:id="@+id/btn_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimension_16dp"
            android:background="@drawable/btn_border_radous_layout"
            android:paddingHorizontal="@dimen/dimension_40dp"
            android:paddingVertical="@dimen/dimension_40dp"
            android:text="@string/btn_one"
            android:textColor="@color/toolbar_bg"
            android:textSize="@dimen/fs_20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_two"
            app:layout_constraintTop_toBottomOf="@id/btn_six" />

        <TextView
            android:id="@+id/btn_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimension_16dp"
            android:background="@drawable/btn_border_radous_layout"
            android:paddingHorizontal="@dimen/dimension_40dp"
            android:paddingVertical="@dimen/dimension_40dp"
            android:text="@string/btn_dot"
            android:textSize="@dimen/fs_20sp"
            app:layout_constraintEnd_toStartOf="@+id/btn_zero"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_three" />

        <TextView
            android:id="@+id/btn_zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimension_16dp"
            android:background="@drawable/btn_border_radous_layout"
            android:backgroundTint="@color/light_bg"
            android:paddingHorizontal="@dimen/dimension_40dp"
            android:paddingVertical="@dimen/dimension_40dp"
            android:text="@string/btn_zero"
            android:textSize="@dimen/fs_20sp"
            app:layout_constraintEnd_toStartOf="@+id/btn_clear"
            app:layout_constraintStart_toEndOf="@+id/btn_dot"
            app:layout_constraintTop_toBottomOf="@id/btn_three" />

        <TextView
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimension_16dp"
            android:background="@drawable/btn_border_radous_layout"
            android:backgroundTint="@color/toolbar_bg"
            android:paddingHorizontal="@dimen/dimension_40dp"
            android:paddingVertical="@dimen/dimension_40dp"
            android:text="@string/btn_clear"
            android:textColor="@color/light_bg"
            android:textSize="@dimen/fs_20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_zero"
            app:layout_constraintTop_toBottomOf="@id/btn_two" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>